# example-grpc-conan-cmake

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  README.md  conanfile.txt
src/client_hw/: main.cpp
src/server_hw/: main.cpp
